fix progress bar, fix horizontal scroll on small desktop breakpoint

--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -21,4 +21,5 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    overflow-x: hidden;
 }
